Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/CRM_Order_Event_Out__e.object-meta.xml
<CustomObject>
    <description>Platform event published from Salesforce for Order insert and updates, which will be consumed by Kafka</description>
    <label>CRM Order Event - Out</label>
    <pluralLabel>CRM_Order_Events - Out</pluralLabel>
</CustomObject>