Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/billingAddressBusinessName__c.field-meta.xml
<CustomField>
    <fullName>billingAddressBusinessName__c</fullName>
    <label>billingAddressBusinessName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>