Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/billingAddressCity__c.field-meta.xml
<CustomField>
    <fullName>billingAddressCity__c</fullName>
    <label>billingAddressCity</label>
    <length>200</length>
    <type>Text</type>
</CustomField>