Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/billingAddressCountryCode__c.field-meta.xml
<CustomField>
    <fullName>billingAddressCountryCode__c</fullName>
    <label>billingAddressCountryCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>