Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/billingAddressID__c.field-meta.xml
<CustomField>
    <fullName>billingAddressID__c</fullName>
    <label>billingAddressID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>