Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/creditCardTransactionID__c.field-meta.xml
<CustomField>
    <fullName>creditCardTransactionID__c</fullName>
    <label>creditCardTransactionID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>