Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/creditCardType__c.field-meta.xml
<CustomField>
    <fullName>creditCardType__c</fullName>
    <label>creditCardType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>