Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/eventDate__c.field-meta.xml
<CustomField>
    <fullName>eventDate__c</fullName>
    <label>eventDate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>