Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/isSignatureRequired__c.field-meta.xml
<CustomField>
    <fullName>isSignatureRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSignatureRequired</label>
    <type>Checkbox</type>
</CustomField>