Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/paymentTerm__c.field-meta.xml
<CustomField>
    <fullName>paymentTerm__c</fullName>
    <label>paymentTerm</label>
    <length>50</length>
    <type>Text</type>
</CustomField>