Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/shippingAddressAccountID__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressAccountID__c</fullName>
    <label>shippingAddressAccountID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>