Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/shippingAddressBusinessName__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressBusinessName__c</fullName>
    <label>shippingAddressBusinessName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>