Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/shippingAddressCountryCode__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressCountryCode__c</fullName>
    <label>shippingAddressCountryCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>