Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/shippingAddressFirstName__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressFirstName__c</fullName>
    <label>shippingAddressFirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>