Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/shippingAddressID__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressID__c</fullName>
    <label>shippingAddressID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>