Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/shippingAddressIsLocked__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressIsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>shippingAddressIsLocked</label>
    <type>Checkbox</type>
</CustomField>