Prod-EU/force-app/main/default/objects/CRM_Order_Event_Out__e/fields/shippingAddressPostalCode__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressPostalCode__c</fullName>
    <label>shippingAddressPostalCode</label>
    <length>15</length>
    <type>Text</type>
</CustomField>